--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,8 +1,15 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft": "Warning",
+      "Microsoft.AspNetCore": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "Gemini": {
+    "Temperature": 0.2,
+    "HttpTimeoutSeconds": 15,
+    "MaxInputChars": 0
   }
 }
