--- a/appsettings.json
+++ b/appsettings.json
@@ -2,8 +2,15 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Gemini": {
+    "BaseUrl": "https://generativelanguage.googleapis.com",
+    "Model": "gemini-2.0-flash",
+    "Temperature": 0.2,
+    "HttpTimeoutSeconds": 15,
+    "MaxInputChars": 0
+  }
 }
