fixed: dotnet run alwats building...

--- a/ai-translator-dotnet.csproj
+++ b/ai-translator-dotnet.csproj
@@ -13,6 +13,11 @@
     <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="dotenv.net" Version="4.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.4" />
+  </ItemGroup>
+
   <!--
     If your original template included Swashbuckle, it will appear here as:
     <ItemGroup>
