add cors and global timeout

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,9 +7,11 @@
     }
   },
   "AllowedHosts": "*",
+  "Timeout": {
+    "HttpTimeoutSeconds": 60
+  },
   "Gemini": {
     "Temperature": 0.2,
-    "HttpTimeoutSeconds": 15,
     "MaxInputChars": 0
   }
 }
