--- a/appsettings.json
+++ b/appsettings.json
@@ -6,11 +6,20 @@
     }
   },
   "AllowedHosts": "*",
+  "Timeout": {
+    "HttpTimeoutSeconds": 60
+  },
   "Gemini": {
     "BaseUrl": "https://generativelanguage.googleapis.com",
     "Model": "gemini-2.0-flash",
     "Temperature": 0.2,
-    "HttpTimeoutSeconds": 15,
     "MaxInputChars": 0
+  },
+  "Cors": {
+    "AllowedOriginSuffixes": [
+      "english-dictionary.app",
+      "127.0.0.1",
+      "localhost"
+    ]
   }
 }
