added cloudflare Turnstile

--- a/appsettings.json
+++ b/appsettings.json
@@ -21,5 +21,9 @@
       "127.0.0.1",
       "localhost"
     ]
+  },
+  "Turnstile": {
+    "RequireOnTranslate": true,
+    "HeaderName": "CF-Turnstile-Token"
   }
 }
