--- a/ai-translator-dotnet.csproj
+++ b/ai-translator-dotnet.csproj
@@ -16,6 +16,8 @@
   <ItemGroup>
     <PackageReference Include="dotenv.net" Version="4.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.4" />
+    <EmbeddedResource Include="Swagger/index.html"
+                      LogicalName="AiTranslatorDotnet.Swagger.index.html" />
   </ItemGroup>
 
   <!--
