--- a/ai-translator-dotnet.csproj
+++ b/ai-translator-dotnet.csproj
@@ -15,9 +15,9 @@
 
   <ItemGroup>
     <PackageReference Include="dotenv.net" Version="4.0.0" />
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.4" />
-    <EmbeddedResource Include="Swagger/index.html"
-                      LogicalName="AiTranslatorDotnet.Swagger.index.html" />
+    <EmbeddedResource Include="Swagger/index.html" LogicalName="AiTranslatorDotnet.Swagger.index.html" />
   </ItemGroup>
 
   <!--
