added x-turnstile-pass to continue use without turnstile verification in a specific times and period

--- a/appsettings.json
+++ b/appsettings.json
@@ -25,5 +25,13 @@
   "Turnstile": {
     "RequireOnTranslate": true,
     "HeaderName": "CF-Turnstile-Token"
+  },
+  "TurnstilePass": {
+    "Enabled": true,
+    "ExpirySeconds": 300,
+    "MaxUses": 30,
+    "HeaderName": "X-Turnstile-Pass",
+    "BindToIp": true,
+    "BindToUserAgent": true
   }
 }
