--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,13 @@
     }
   },
   "AllowedHosts": "*",
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://127.0.0.1:0"
+      }
+    }
+  },
   "Timeout": {
     "HttpTimeoutSeconds": 60
   },
